--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,7 @@
   </head>
 
   <body>
+    <h1>Prova</h1>
     <main class="container mx-auto flex flex-col">
 
       <%= render "components/navbar" %>
